import {
  renderToString,
  renderToBdom,
  snapshotEverything,
  TestContext,
  makeTestFixture,
  getConsoleOutput,
} from "../helpers";
import { mount, patch } from "../../src/blockdom";
import { createBlock } from "../../src/blockdom/index";
import { markup } from "../../src/utils";
import { Component, mount as mountComponent, xml } from "../../src";

snapshotEverything();

// -----------------------------------------------------------------------------
// t-out
// -----------------------------------------------------------------------------

describe("t-out", () => {
  let fixture: HTMLElement;

  beforeEach(() => {
    fixture = makeTestFixture();
  });

  test("literal", () => {
    const template = `<span><t t-out="'ok'"/></span>`;
    expect(renderToString(template)).toBe("<span>ok</span>");
  });

  test("number literal", () => {
    const template = `<span><t t-out="1"/></span>`;
    expect(renderToString(template)).toBe("<span>1</span>");
  });

  test("literal, no outside html element", () => {
    const template = `<t t-out="'ok'"/>`;
    expect(renderToString(template)).toBe("ok");
  });

  test("variable", () => {
    const template = `<span><t t-out="var"/></span>`;
    expect(renderToString(template, { var: "ok" })).toBe("<span>ok</span>");
  });

  test("with a String class", () => {
    const template = `<span><t t-out="var"/></span>`;
    expect(renderToString(template, { var: new String("ok") })).toBe("<span>ok</span>");
  });

  test("t-out with the 0 number", () => {
    const template = `<t t-out="var"/>`;
    expect(renderToString(template, { var: 0 })).toBe("0");
  });

  test("t-out with the 0 number, in a p", () => {
    const template = `<p><t t-out="var"/></p>`;
    expect(renderToString(template, { var: 0 })).toBe("<p>0</p>");
  });

  test("top level t-out with undefined", () => {
    const template = `<t t-out="var"/>`;
    expect(renderToString(template, { var: undefined })).toBe("");
  });

  test("top level t-out with null", () => {
    const template = `<t t-out="var"/>`;
    expect(renderToString(template, { var: null })).toBe("");
  });

  test("with an extended String class", () => {
    class LoveString extends String {
      valueOf(): string {
        return `<3 ${super.valueOf()} <3`;
      }
      toString(): string {
        return this.valueOf();
      }
    }
    const template = `<span><t t-out="var"/></span>`;
    expect(renderToString(template, { var: new LoveString("ok") })).toBe(
      "<span>&lt;3 ok &lt;3</span>"
    );
  });

  test("not escaping", () => {
    const template = `<div><t t-out="var"/></div>`;
    expect(renderToString(template, { var: markup("<ok></ok>") })).toBe("<div><ok></ok></div>");
  });

  test("t-out and another sibling node", () => {
    const template = `<span><span>hello</span><t t-out="var"/></span>`;
    expect(renderToString(template, { var: markup("<ok>world</ok>") })).toBe(
      "<span><span>hello</span><ok>world</ok></span>"
    );
  });

  test("t-out with comment", () => {
    const template = `<span><t t-out="var"/></span>`;
    expect(renderToString(template, { var: markup("<p>text<!-- top secret --></p>") })).toBe(
      "<span><p>text<!-- top secret --></p></span>"
    );
  });

  test("t-out on a node with a body, as a default", () => {
    const template = `<span t-out="var">nope</span>`;
    expect(renderToString(template)).toBe("<span>nope</span>");
  });

  test("t-out on a <t> with a body, as a default", () => {
    const template = `<div><t t-out="var">nope <b>!</b></t></div>`;
    expect(renderToString(template)).toBe("<div>nope <b>!</b></div>");
    expect(renderToString(template, { var: "yes" })).toBe("<div>yes</div>");
  });

  test("t-out cannot be combined with a directive it would drop", () => {
    expect(() => renderToString(`<t t-out="x" t-call-slot="s"/>`)).toThrow(
      "Unsupported directive 't-call-slot' on a <t> with t-out"
    );
    expect(() => renderToString(`<t t-out="x" t-set="y" t-value="1"/>`)).toThrow(
      "Unsupported directive 't-set' on a <t> with t-out"
    );
  });

  test("t-out with a <t/> in body", () => {
    const template = `<t t-out="var"><t></t></t>`;
    expect(renderToString(template, { var: "coucou" })).toBe("coucou");
  });

  test("t-out with just a t-set t-value in body", () => {
    const template = `<t t-out="var"><t t-set="a" t-value="1" /></t>`;
    expect(renderToString(template, { var: "coucou" })).toBe("coucou");
  });

  test("t-out on a node with a dom node in body, as a default", () => {
    const template = `<span t-out="var"><div>nope</div></span>`;
    expect(renderToString(template)).toBe("<span><div>nope</div></span>");
  });

  test("t-out default body that does not start with a block", () => {
    const template = `<div t-out="x"><t t-set="y"><b>1</b></t><span>default</span></div>`;
    expect(renderToString(template)).toBe("<div><span>default</span></div>");
    expect(renderToString(template, { x: "value" })).toBe("<div>value</div>");
  });

  test("t-out default body is only rendered when used", () => {
    let calls = 0;
    const f = () => ++calls;
    const template = `<div t-out="x"><span t-out="f()"/></div>`;
    expect(renderToString(template, { x: "value", f })).toBe("<div>value</div>");
    expect(calls).toBe(0);
    expect(renderToString(template, { f })).toBe("<div><span>1</span></div>");
    expect(calls).toBe(1);
  });

  test("multiple calls to t-out", () => {
    const context = new TestContext();
    const sub = `
        <div>
          <t t-out="0"/>
          <div>Greeter</div>
          <t t-out="0"/>
        </div>`;

    const main = `
        <div>
          <t t-call="sub">
            <span>coucou</span>
          </t>
        </div>`;

    context.addTemplate("sub", sub);
    context.addTemplate("main", main);
    const expected =
      "<div><div><span>coucou</span><div>Greeter</div><span>coucou</span></div></div>";
    expect(context.renderToString("main")).toBe(expected);
  });

  test("t-out escaped", () => {
    const template = `<span t-out="var" />`;
    expect(renderToString(template, { var: "<div>nope</div>" })).toBe(
      "<span>&lt;div&gt;nope&lt;/div&gt;</span>"
    );
  });

  test("t-out markedup", () => {
    const template = `<span t-out="var" />`;
    expect(renderToString(template, { var: markup("<div>nope</div>") })).toBe(
      "<span><div>nope</div></span>"
    );
  });

  test("t-out switch escaped", () => {
    const template = `<span t-out="var" />`;
    const node = renderToBdom(template, { var: "<div>nope</div>" });
    mount(node, fixture);

    expect(fixture.innerHTML).toBe("<span>&lt;div&gt;nope&lt;/div&gt;</span>");
    patch(node, renderToBdom(template, { var: "<li>yep</li>" }));

    expect(fixture.innerHTML).toBe("<span>&lt;li&gt;yep&lt;/li&gt;</span>");
  });

  test("t-out switch markup", () => {
    const template = `<span t-out="var" />`;
    const node = renderToBdom(template, { var: markup("<div>nope</div>") });
    mount(node, fixture);

    expect(fixture.innerHTML).toBe("<span><div>nope</div></span>");
    patch(node, renderToBdom(template, { var: markup("<li>yep</li>") }));

    expect(fixture.innerHTML).toBe("<span><li>yep</li></span>");
  });

  test("t-out switch markup on escaped", () => {
    const template = `<span t-out="var" />`;
    const node = renderToBdom(template, { var: "<div>nope</div>" });
    mount(node, fixture);

    expect(fixture.innerHTML).toBe("<span>&lt;div&gt;nope&lt;/div&gt;</span>");
    patch(node, renderToBdom(template, { var: markup("<li>yep</li>") }));

    expect(fixture.innerHTML).toBe("<span><li>yep</li></span>");
  });

  test("t-out switch escaped on markup", () => {
    const template = `<span t-out="var" />`;
    const node = renderToBdom(template, { var: markup("<div>nope</div>") });
    mount(node, fixture);

    expect(fixture.innerHTML).toBe("<span><div>nope</div></span>");
    patch(node, renderToBdom(template, { var: "<li>yep</li>" }));

    expect(fixture.innerHTML).toBe("<span>&lt;li&gt;yep&lt;/li&gt;</span>");
  });

  test.skip("t-out block", () => {
    const block = createBlock("<div>block</div>");
    const template = `<span t-out="bdom"/>`;
    expect(renderToString(template, { bdom: block() })).toBe("<span><div>block</div></span>");
  });

  test("t-out bdom", () => {
    const template = `<div><t t-set="var"><ol>set</ol></t><span t-out="var" /></div>`;
    expect(renderToString(template)).toBe("<div><span><ol>set</ol></span></div>");
  });

  test("t-out switch markup on bdom", () => {
    const template = `<div>
      <t t-set="bdom"><ol>set</ol></t>
      <t t-if="hasBdom">
        <span t-out="bdom" />
      </t>
      <t t-else="">
        <span t-out="var" />
      </t>
    </div>`;

    const node = renderToBdom(template, { hasBdom: true, var: markup("<li>yep</li>") });
    mount(node, fixture);

    expect(fixture.innerHTML).toBe("<div><span><ol>set</ol></span></div>");
    patch(node, renderToBdom(template, { hasBdom: false, var: markup("<li>yep</li>") }));

    expect(fixture.innerHTML).toBe("<div><span><li>yep</li></span></div>");
  });

  test("t-out 0", () => {
    const context = new TestContext();
    context.addTemplate("_basic-callee", `<div><t t-out="0" /></div>`);
    context.addTemplate("caller", `<div><t t-call="_basic-callee"><div>zero</div></t></div>`);
    const node = context.getTemplate("caller")({}, null, "");
    mount(node, fixture);
    expect(fixture.innerHTML).toBe("<div><div><div>zero</div></div></div>");
  });

  test("t-out with arbitrary object", () => {
    const template = `<div t-out="var" />`;
    const node = renderToBdom(template, { var: { someKey: "someValue" } });
    mount(node, fixture);
    expect(fixture.innerHTML).toBe(`<div>[object Object]</div>`);
  });

  test("t-out with arbitrary object 2", () => {
    const template = `<div t-out="var" />`;
    const node = renderToBdom(template, { var: ["someValue"] });
    mount(node, fixture);
    expect(fixture.innerHTML).toBe(`<div>someValue</div>`);
  });
});

describe("t-esc is deprecated", () => {
  test("should warn", () => {
    const template = `<div t-esc="var" />`;
    expect(renderToString(template, { var: "<div>escaped</div>" })).toBe(
      "<div>&lt;div&gt;escaped&lt;/div&gt;</div>"
    );
    expect(getConsoleOutput()).toEqual([
      'warn:t-esc has been deprecated in favor of t-out. If the value to render is not wrapped by the "markup" function, it will be escaped',
    ]);
  });

  test("t-out is actually called in t-esc's place", () => {
    const template = `<div t-esc="var" />`;
    expect(renderToString(template, { var: markup("<div>esc</div>") })).toBe(
      "<div><div>esc</div></div>"
    );
    expect(getConsoleOutput()).toEqual([
      'warn:t-esc has been deprecated in favor of t-out. If the value to render is not wrapped by the "markup" function, it will be escaped',
    ]);
  });

  test("t-esc on a component is its default slot, as t-out is", async () => {
    class Child extends Component {
      static template = xml`<b>[<t t-call-slot="default"/>]</b>`;
    }
    class Parent extends Component {
      static template = xml`<div><Child t-esc="'hi'"/></div>`;
      static components = { Child };
    }
    const fixture = makeTestFixture();
    await mountComponent(Parent, fixture);
    expect(fixture.innerHTML).toBe("<div><b>[hi]</b></div>");
    expect(getConsoleOutput().length).toBe(1);
  });
});
