// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-esc is deprecated > should warn 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-esc is deprecated > t-esc on a component is its default slot, as t-out is 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function slot1(ctx, node, key = "") {
    return safeOutput('hi', key + \`__1\`);
  }
  
  return function template(ctx, node, key = "") {
    const b3 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
    return block1([], [b3]);
  }
}"
`;

exports[`t-esc is deprecated > t-esc on a component is its default slot, as t-out is 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<b>[<block-child-0/>]</b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key, 'default', false, {});
    return block1([], [b2]);
  }
}"
`;

exports[`t-esc is deprecated > t-out is actually called in t-esc's place 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > literal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput('ok', key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > literal, no outside html element 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput('ok', key + \`__1\`);
  }
}"
`;

exports[`t-out > multiple calls to t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<span>coucou</span>\`);
  
  function callBody1(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate(\`sub\`, this, app, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > multiple calls to t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><div>Greeter</div><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    const b3 = ctx[zero]?.(node, key + \`__1\`) || text("");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-out > not escaping 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > number literal 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(1, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out 0 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, callTemplate } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<div>zero</div>\`);
  
  function callBody1(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const lazyBlock1 = callBody1.bind(this, ctx);
    const b2 = callTemplate(\`_basic-callee\`, this, app, Object.assign(Object.create(ctx), {[zero]: lazyBlock1}), node, key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out 0 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = ctx[zero]?.(node, key) || text("");
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out and another sibling node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><span>hello</span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out bdom 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><span><block-child-0/></span></div>\`);
  let block2 = createBlock(\`<ol>set</ol>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`var\`] = new LazyValue(value1, ctx, this, node, key);
    const b3 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b3]);
  }
}"
`;

exports[`t-out > t-out default body is only rendered when used 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<span><block-child-0/></span>\`);
  
  function defaultContent1(ctx, node, key = "") {
    const b4 = safeOutput(ctx['f'](), key + \`__2\`);
    return block3([], [b4]);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['x'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out default body that does not start with a block 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, LazyValue, withDefault } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block3 = createBlock(\`<b>1</b>\`);
  let block4 = createBlock(\`<span>default</span>\`);
  
  function defaultContent1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`y\`] = new LazyValue(value1, ctx, this, node, key);
    return block4();
  }
  
  function value1(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['x'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out escaped 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out markedup 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out on a <t> with a body, as a default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block5 = createBlock(\`<b>!</b>\`);
  
  function defaultContent1(ctx, node, key = "") {
    const b4 = text(\`nope \`);
    const b5 = block5();
    return multi([b4, b5]);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out on a node with a body, as a default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  function defaultContent1(ctx, node, key = "") {
    return text(\`nope\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out on a node with a dom node in body, as a default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  let block3 = createBlock(\`<div>nope</div>\`);
  
  function defaultContent1(ctx, node, key = "") {
    return block3();
  }
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out switch escaped 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out switch escaped on markup 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out switch markup 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out switch markup on bdom 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<ol>set</ol>\`);
  let block3 = createBlock(\`<span><block-child-0/></span>\`);
  let block5 = createBlock(\`<span><block-child-0/></span>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b3, b5;
    ctx[\`bdom\`] = new LazyValue(value1, ctx, this, node, key);
    if (ctx['hasBdom']) {
      const b4 = safeOutput(ctx['bdom'], key + \`__1\`);
      b3 = block3([], [b4]);
    } else {
      const b6 = safeOutput(ctx['var'], key + \`__2\`);
      b5 = block5([], [b6]);
    }
    return block1([], [b3, b5]);
  }
}"
`;

exports[`t-out > t-out switch markup on escaped 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out with a <t/> in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['var'], key + \`__1\`);
  }
}"
`;

exports[`t-out > t-out with arbitrary object 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out with arbitrary object 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out with comment 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > t-out with just a t-set t-value in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  function defaultContent1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["a"] = 1;
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['var'], key + \`__1\`, () => defaultContent1.call(this, ctx, node, key + \`__1\`));
  }
}"
`;

exports[`t-out > t-out with the 0 number 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['var'], key + \`__1\`);
  }
}"
`;

exports[`t-out > t-out with the 0 number, in a p 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > top level t-out with null 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['var'], key + \`__1\`);
  }
}"
`;

exports[`t-out > top level t-out with undefined 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['var'], key + \`__1\`);
  }
}"
`;

exports[`t-out > variable 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > with a String class 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;

exports[`t-out > with an extended String class 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['var'], key + \`__1\`);
    return block1([], [b2]);
  }
}"
`;
